* Vibur DBCP is now available as an OSGi bundle.
* Added Hibernate 4.3+ integration (into a separate project).
* driverClassName config property was reestablished as an optional config property. It is needed when
  running Vibur DBCP into an OSGi container, and may also be helpful if Vibur DBCP is used in an
  Apache Tomcat web application.
* Vibur DBCP JNDI ObjectFactory implemented.
* name and enableJMX configuration properties added.
* criticalSQLStates configuration property added (advanced).
* Various other product enhancements and bug fixes.

Version 1.0.0 (02/02/2014)
==========================
* Implemented a pool drain (destroying all connections) after a critical SQL server error.
* Allowed for creation of the initial connections in the pool from an existing/external DataSource.
* Made poolReducer optional - config value of 0 disables it.
* driverClassName config property was removed as it is not required when using Java 1.6+.
* Implemented Hibernate4 integration (into a separate project).
* Externalized Hibernate3 integration into a separate project.

Version 0.8.3 (15/11/2013)
==========================
* Implemented the ResultSet returned by Statement interface methods as a dynamic proxy so that
  ResultSet.getStatement() will return the correct proxied Statement.
* Implemented proper handling of Connection.isValid() method and made it the default option
  for Connection testing and verification.
* Improved logging.
* Various other refactoring and small improvements/optimizations.

Version 0.8.2 (16/10/2013)
==========================
* Fix to allow for exclusion of ConcurrentLinkedHashMap from maven dependencies.

Version 0.8.1 (15/10/2013)
==========================
* Bugs fixes and refactoring.
* Simple JDBC Statements are not longer cached.

Version 0.8.0 (28/09/2013)
==========================
* Removed TransactionListener as being implemented incorrectly.
* Changed some configuration defaults, introduced logQueryExecutionLongerThanMs.